--- a/client/src/component/Navbar/Navbar.css
+++ b/client/src/component/Navbar/Navbar.css
@@ -1,19 +1,30 @@
  .navigation{
   display:flex;
-  background-color:#581845;;
-  justify-content: space-between; 
-   align-content: space-between;
+  background-color:#581845;
+  justify-content: space-around; 
+  
  }
  
  .logo{
- 
-  height:8em;
+  
+  height:10em;
+  width: 12em;
+  margin-left: 15rem;
  }
  
-
+.h1{justify-content: center;
+   align-items: center;
+   margin-left: 10rem;
+   font-size: 3rem;
+  
+}
 
 .menu-profile{
-  background-color: none;
+  background-color:#581845;;
+  height:4rem;
+ 
+
+
 }
 
  
@@ -36,7 +47,8 @@
 .navlink{
   display: none; 
   position: absolute; 
-  background-color: rgb(185, 161, 204); 
+  background-color: rgb(105, 86, 121); 
+  color:black;
   z-index: 3; 
 }
 
@@ -50,6 +62,7 @@
   display: block; 
   text-align: center; 
   margin: 0;
+  
 }
   
 a{ 
@@ -58,7 +71,6 @@ a{
  p:hover { background-color: blanchedalmond; 
 
 }  
-
 
 
  
