--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,7 @@
-body{
+@media screen and (max-width: 844px) {
+  
+}
+  body{
     margin: 0;
     padding: 0;
  /*   background-image: url("./assets/fondodepantalla.png");*/
