--- a/client/src/component/Category/Category.css
+++ b/client/src/component/Category/Category.css
@@ -1,12 +1,12 @@
-.category-container{
+@media screen and (max-width: 844px) {.category-container{
 background-color:rgba(147,147,147, 0.7);
-width: 10rem;
-height: 20rem;
+width: 100%;
+height: auto;
 margin-left:2rem;
 margin-bottom: 15rem;
-padding-left:1.5rem;
+padding:0.5 0rem;
 
-
+}
 
 }
 
@@ -15,3 +15,8 @@ padding-left:1.5rem;
     text-align: center;
     margin-right: 2rem;
 }
+
+   
+  
+  
+  
