--- a/client/src/component/Footer/Footer.css
+++ b/client/src/component/Footer/Footer.css
@@ -1,7 +1,8 @@
 .footer-container{
-    display:flex;
+    display:row;
     justify-content: space-between;
-    padding: 0 5rem;
+    padding: 3.5rem;
+    gap:2rem;
     align-items: center;
     background-color: #581845;
 }
