--- a/client/src/component/Navbar/Navbar.css
+++ b/client/src/component/Navbar/Navbar.css
@@ -1,20 +1,31 @@
-.navigation{
-  display:flex;
+@media screen and (max-width: 844px) {
+  .navigation {
+  transition: 0.8s all ease;
+  width: 100%;
+  height: auto;
+  padding: 0.5rem 0rem;
   background-color:#581845;
-  justify-content: space-around; 
+  display:inline-flex;
+  justify-content:space-between; 
   align-items: center; 
+  position: sticky;
+}
 }
  
 .logo{
-  height:10em;
-  width: 10em;
-  margin-left: 15rem;
+  height:10rem;
+  width: 10rem;
+  margin-left: 0.5rem;
+  padding: auto;
+
 }
  
 .h1{justify-content: center;
    align-items: center;
-   margin-left: 10rem;
+   margin-left: 15rem;
    font-size: 3rem;
+ 
+ 
 }
 
 .menu-profile{
@@ -63,3 +74,9 @@
 .navlink>p>a:hover{
   color: black;
 }
+
+
+
+
+
+
