--- a/client/src/component/ChangeForm/ChangeForm.css
+++ b/client/src/component/ChangeForm/ChangeForm.css
@@ -1,7 +1,7 @@
 .btn-switch-form{
     background-color: rgba(147,147,147, 0.7);
-    height: 50vh;
-    width: 80vw;
+    height: 40vh;
+    width: 15vw;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -31,31 +31,18 @@
     transform: translateY(-1px);
     box-shadow: none;
 }
-
 /*Responsive ChangeForm */
 
-@media (max-width:844px){
-    .btn-switch-form{
-    height: 30vh;
-    width:100%;
-    display: -ms-inline-flex;
-    flex-direction:row;
-    justify-content: space-evenly;
-    align-items: center;
- 
-    
-    
-    }
+@media (max-width: 844px){
+    #btn-switch-form{
+        height: 1vh;
+        width: 72vw;
+        display: flex;
+        flex-direction: row;
+    }  
 
-}
-
-@media (max-width: 320px){
-    .btn-switch-form>button{
-        height: 5px;
-        width: 8vw;
-        border: 0.2em solid black;
-        border-radius: 1rem;
-        background-color: #fefefe;
-        font-weight: bold;
+    #btn-switch-form>button{
+        height: 6vh;
+        width: 50vw;
     }
 }
