--- a/client/src/page/Login/Login.css
+++ b/client/src/page/Login/Login.css
@@ -1,5 +1,5 @@
 .login-section{
-    height: 83vh;
+    height: 90vh;
     overflow: auto; 
     display: flex;
     justify-content: center;
@@ -11,8 +11,8 @@
     border: 0.05rem solid black;
     margin: auto;
     padding: auto;
-    height: 80vh;
-    width: 90vw;
+    height: 85vh;
+    width: 91vw;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
@@ -27,6 +27,7 @@
     height: 70vh;
     width: 90vw;
     display: flex;
+    flex-direction: row;
     justify-content: space-around;
     align-items: center;
 }
@@ -39,6 +40,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 1rem;
 }
 
 .login-form-content{
@@ -57,8 +59,7 @@
 
 .login-form-l-i>label{
     font-size: large;
-    color: #A02C7D
-    ;
+    color: #A02C7D;
 }
 
 .login-form-l-i>input{
@@ -85,10 +86,15 @@
     border: 0.1rem solid black;
 }
 
-.login-form-b>button:hover{
-    background-color: rgba(160,44,125, 0.9);
+.login-form-b-a:hover{
+    background-color: rgba(255, 210, 31, 0.9);
     transform: translateY(-3px);
-    color: #e8e8e8;
+    box-shadow: 0.5rem 0.5rem rgba(112,31,88, 0.5);
+}
+
+.login-form-b-c:hover{
+    background-color: rgba(229, 50, 65, 0.9);
+    transform: translateY(-3px);
     box-shadow: 0.5rem 0.5rem rgba(112,31,88, 0.5);
 }
 
@@ -99,115 +105,36 @@
 
 /*Responsive Login*/
 
-@media (max-width: 390px)
+@media (max-width: 844px){
     .login-section{
         display: flex;
-        justify-content:center;
+        justify-content: center;
+    }
+
+    .login-form-all{
+        width: 94vw;
+        height: 88vh;
     }
     
-
-    @media (max-width: 390px){
-        .login-form-container{ 
+    .login-form-container{ 
         width: 100%;
-        height:50vh;
-      
-        
-        }
-}
-/*
-}
-
-.login-form-all{
-    position: relative;
-    background-color: #fefefe;
-    border: 0.05rem solid black;
-    margin: auto;
-    padding: auto;
-    height: 80vh;
-    width: 90vw;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-}
-
-.login-form-title{
-    text-align: center;
-    background-color: #581845;
-    color: #e8e8e8;
-    margin-top: 2.3rem;
-}
-
-@media screen and (max-width: 844px) {
-    .
-}
-
-.login-form{
-    background-color: rgba(147,147,147, 0.7);
-    height: 60vh;
-    width: 50vw;
-    border-radius: 1rem;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-}
-
-@media screen and (max-width: 844px) {
-    .login-form-content{
-    display:inline-flex;
-    flex-direction: column;  
-    gap: 2rem;
-    font-weight: bold;
-}
-}
-
-.login-form-l-i{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 0.2rem;
-}
-
-.login-form-l-i>label{
-    font-size: large;
-    color: #A02C7D
-    ;
-}
-
-.login-form-l-i>input{
-    width: 40vw;
-    height: 2.5rem;
-    text-indent: 1rem;
-    border-radius: 0.5rem;
-    color: black;
-    font-weight: bold;
-    border: none;
+        display: flex;
+        flex-direction: column;
+        justify-content:center;   
+    }
     
-}
+    .login-form{
+        width: 80vw;
+        height: 45vh;
+        margin-top: 1rem;
+    }
 
-.login-form-b{
-    align-self: flex-end;
-}
+    .login-form-l-i{
+        width: 70vw;
+    }
 
-   @media screen and (max-width: 844px) {
-    login-form-b>button{
-    margin-left: 2rem;
-    height: 2.5rem;
-    width: 5rem;
-    font-weight: bold;
-    border-radius: 1rem;
-    background-color: #fefefe;
-    border: 0.1rem solid black;
+    .login-form-l-i>input{
+        width: 70vw;
+        height: 2rem;
+    }  
 }
-   }
-
-.login-form-b>button:hover{
-    background-color: rgba(160,44,125, 0.9);
-    transform: translateY(-3px);
-    color: #e8e8e8;
-    box-shadow: 0.5rem 0.5rem rgba(112,31,88, 0.5);
-}
-
-.login-form-b>button:active{
-    transform: translateY(-1px);
-    box-shadow: none;
-}
-
-*/
