--- a/client/src/page/Profile/Profile.css
+++ b/client/src/page/Profile/Profile.css
@@ -1,20 +1,18 @@
 .profile-section{
-  height: 83vh;
-  overflow: auto; 
-  display: flex;
-  justify-content: center;
+  margin-bottom: 1rem;
 }
 
 .profile-form-title{
   text-align: center;
   background-color: #581845;
   color: #e8e8e8;
-  margin-top: 2.3rem;
+}
+
+.profile-form-welcome{
+  text-align: center;
 }
 
 .profile-form-container{  
-  height: 70vh;
-  width: 90vw;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -46,8 +44,7 @@
 
 .profile-form-l-i>label{
   font-size: large;
-  color: #A02C7D
-  ;
+  color: #A02C7D;
 }
 
 .profile-form-l-i>input{
@@ -75,49 +72,19 @@
   border: 0.1rem solid black;
 }
 
-.profile-form-b>button:hover{
-  background-color: rgba(160,44,125, 0.9);
+.profile-from-b-s:hover{
+  background-color: rgba(50, 185, 50, 0.9);
   transform: translateY(-3px);
-  color: #e8e8e8;
+  box-shadow: 0.5rem 0.5rem rgba(112,31,88, 0.5);
+}
+
+.profile-from-b-c:hover{
+  background-color: rgba(229, 50, 65, 0.9);     
+  transform: translateY(-3px);
   box-shadow: 0.5rem 0.5rem rgba(112,31,88, 0.5);
 }
 
 .profile-form-b>button:active{
-  transform: translateY(-1px);
-  box-shadow: none;
-}
-
-.btn-switch-form{
-  background-color: rgba(147,147,147, 0.7);
-  height: 40vh;
-  width: 15vw;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  gap: 2rem;
-  border-radius: 1rem;
-  padding: 2rem 2rem; 
-}
-
-.btn-switch-form>button{
-  height: 15vh;
-  width: 8vw;
-  border: 0.2em solid black;
-  border-radius: 1rem;
-  background-color: #fefefe;
-  font-weight: bold;
-
-}
-
-.btn-switch-form>button:hover{
-  background-color: rgba(160,44,125, 0.9);
-  transform: translateY(-3px);
-  color: #e8e8e8;
-  box-shadow: 0.5rem 0.5rem rgba(112,31,88, 0.5);
-}
-
-.btn-switch-form>button:active{
   transform: translateY(-1px);
   box-shadow: none;
 }
