#8 style and font added,changes made in carousel

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,5 @@
 body{
+    font-family: Aref Ruqaa Ink;
     margin: 0;
     padding: 0;
     background-image: url("./assets/fondodepantalla(1).jpg");
