--- a/client/src/component/Navbar/MenuAdmin/MenuAdmin.css
+++ b/client/src/component/Navbar/MenuAdmin/MenuAdmin.css
@@ -5,8 +5,10 @@
 }
 
 .menu-admin-profile{
-  background-color:#581845;
-  height:4rem;
+  background-color: rgba(254, 254, 254, 0.5);
+  border: 0.1rem solid #fefefe;
+  height:4rem; 
+  border-radius: 2rem;
 }
 
 .menu-admin-li{
