#1 make responsive the home, profile, navbar sections and remove some comments

--- a/client/src/component/ProfileSwitch/ProfileSwitch.css
+++ b/client/src/component/ProfileSwitch/ProfileSwitch.css
@@ -31,3 +31,21 @@
     box-shadow: none;
 }
   
+/*Responsive ProfileSwitch*/
+
+@media (max-width: 844px){
+    .btn-switch{
+        height: auto;
+        width: 72vw;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;   
+        gap: 0.5rem;
+        padding: 1rem 2rem; 
+    }  
+
+    .btn-switch-b{
+        height: 8vh;
+        width: 34vw; 
+    }
+}
