#7 create select category structure for create new post section, with a temporal data json

--- a/client/src/page/Comments/Comment.css
+++ b/client/src/page/Comments/Comment.css
@@ -65,6 +65,10 @@
     background-color: rgb(176, 176, 176);
 }
 
+.comment-link{
+    text-decoration: none;
+}
+
 /*Responsive Comment*/
 
 @media (max-width: 1364px){
