#4 Add advertising error to the form's inputs, modify sizes, some style, add some icons #9 change user to users and try to fix the values required

--- a/client/src/component/ChangeForm/ChangeForm.css
+++ b/client/src/component/ChangeForm/ChangeForm.css
@@ -12,12 +12,19 @@
 }
 
 .btn-switch-form-b{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 15vh;
-    width: 10vw;
+    width: 15vw;
     border: 0.2em solid black;
     border-radius: 1rem;
     background-color: #fefefe;
     font-weight: bold;
+}
+
+.btn-switch-form-links{
+    text-decoration: none;
 }
 
 .btn-switch-form-b:hover{
