--- a/client/src/page/Login/Login.css
+++ b/client/src/page/Login/Login.css
@@ -16,6 +16,11 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
+.login-form-error{
+    display: flex;
+    align-items: center;
+}
+
 .login-form-title{
     text-align: center;
     background-color: #581845;
@@ -73,17 +78,24 @@
 }
 
 .login-form-b{
-    align-self: flex-end;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .login-form-b>button{
     margin-left: 2rem;
     height: 2.5rem;
-    width: 5rem;
+    width: 7rem;
     font-weight: bold;
     border-radius: 1rem;
     background-color: #fefefe;
     border: 0.1rem solid black;
+}
+
+.login-form-b-a, .login-form-b-c{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .login-form-b-a:hover{
@@ -101,6 +113,13 @@
 .login-form-b>button:active{
     transform: translateY(-1px);
     box-shadow: none;
+}
+
+.login-form-user-invalid{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 0.15rem solid rgba(143, 0, 12, 0.9);
 }
 
 /*Responsive Login*/
