--- a/client/src/page/Register/Register.css
+++ b/client/src/page/Register/Register.css
@@ -1,5 +1,5 @@
 .register-section{
-  height: 90vh;
+  height: 95vh;
   overflow: auto; 
   display: flex;
   justify-content: center;
@@ -11,7 +11,7 @@
   border: 0.05rem solid black;
   margin: auto;
   padding: auto;
-  height: 85vh;
+  height: 90vh;
   width: 91vw;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
 }
@@ -20,7 +20,7 @@
   text-align: center;
   background-color: #581845;
   color: #e8e8e8;
-  margin-top: 2.3rem;
+  margin: 2.3rem 0;
 }
 
 .register-form-container{  
@@ -32,9 +32,14 @@
   align-items: center;
 }
 
+.register-form-error{
+  display: flex;
+  align-items: center;
+}
+
 .register-form{
   background-color: rgba(147,147,147, 0.7);
-  height: 65vh;
+  height: 73vh;
   width: 50vw;
   border-radius: 1rem;
   display: flex;
@@ -63,7 +68,7 @@
 }
 
 .register-form-l-i>input{
-  width: 40vw;
+  width: 46vw;
   height: 2.5rem;
   text-indent: 1rem;
   border-radius: 0.5rem;
@@ -73,17 +78,24 @@
 }
 
 .register-form-b{
-  align-self: flex-end;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .register-form-b>button{
-  margin-left: 2rem;
+  margin-left: 2vw;
   height: 2.5rem;
-  width: 5rem;
+  width: 7rem;
   font-weight: bold;
   border-radius: 1rem;
   background-color: #fefefe;
   border: 0.1rem solid black;
+}
+
+.register-form-b-a, .register-form-b-r, .register-form-b-c{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .register-form-b-a:hover{
@@ -113,17 +125,18 @@
 
 @media (max-width: 844px){ 
   .register-section{
+    height: 100vh;
     display: flex;
     justify-content:center;
   }
 
   .register-form-all{
     width: 94vw;
-    height: 88vh;
+    height: 97vh;
   }
 
   .register-form-container{  
-    width: 100%;
+    height: 76vh;
     display: flex;
     flex-direction: column;
     justify-content:center; 
@@ -135,7 +148,7 @@
   }
 
   .register-form-l-i>input{
-    width: 75vw;
+    width: 78vw;
     height: 2rem;
   }
 
