--- a/client/src/page/Profile/Profile.css
+++ b/client/src/page/Profile/Profile.css
@@ -63,9 +63,12 @@
 }
 
 .profile-form-b>button{
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-left: 2rem;
   height: 2.5rem;
-  width: 5rem;
+  width: 7rem;
   font-weight: bold;
   border-radius: 1rem;
   background-color: #fefefe;
