--- a/client/src/component/Category/Category.css
+++ b/client/src/component/Category/Category.css
@@ -11,15 +11,27 @@
 }
 
 .category-list-items{
-    border-bottom: 1.5px solid black;
-    color: white;
+    background-color: transparent;
+    border-bottom: 1.5px solid black;   
     list-style-type: none;
     margin: 0.5rem;
 }
 
+.category-list-items>li{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.2rem;
+    filter: brightness(0) invert(1);;
+}
+
+.category-list-items-img{
+    height: 1.5rem;  
+}
+
 .category-list-items:hover{
-    background-color: blanchedalmond; 
-    color: black;
+    filter: brightness(0) invert(0);
+    border: 0.1rem solid black;
     border-radius: 0.2rem;
 }
 
