--- a/client/src/page/UserPages/MyComments/MyComments.css
+++ b/client/src/page/UserPages/MyComments/MyComments.css
@@ -85,6 +85,7 @@
   width: 40vw;
   height: 3vh;
   border-bottom: 0.1rem solid rgba(160, 44, 125, 0.9); 
+  font-weight: bold;
 }
 
 .my-comments-post-tags{
