#1 create notfound page and style it, modif routes #8 add infographics in home #6 fix user and almost post services, add infographicsto profile, elements conditinal rendering for the tables states #7 add conditional message if there is not comments relative  to the keyword

--- a/client/src/component/AdminEdict/UserInfo/UsersInfo.css
+++ b/client/src/component/AdminEdict/UserInfo/UsersInfo.css
@@ -1,8 +1,8 @@
-.category-types-table{
-
+.users-info-table{
+    width: 90vw;
 }
 
-.category-types-img{
+.users-info-img{
     height: 2rem;
     width: 2rem;
     border-radius: 100%;
