--- a/client/src/component/Category/Category.css
+++ b/client/src/component/Category/Category.css
@@ -18,16 +18,17 @@
 }
 
 .category-list-items>li{
-    height: 2rem;
+    height: auto;
     display: flex;
-    justify-content: center;
     align-items: center;
     gap: 0.2rem;
-    filter: brightness(0) invert(1);;
+    filter: brightness(0) invert(1);
+    padding: 0.5rem;
 }
 
 .category-list-items-img{
-    height: 1.5rem; 
+    height: 1.5rem;
+    margin-left: 0.1rem; 
 }
 
 .category-list-items:hover{
