--- a/client/src/page/UserPages/MyComments/MyComments.css
+++ b/client/src/page/UserPages/MyComments/MyComments.css
@@ -65,6 +65,9 @@
   background-color: rgb(176, 176, 176);
   border: 0.1rem solid black;
   border-radius: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .my-comments-post-info{
